# scraping_and_wordcloud

./: README.md  pyproject.toml
data/: recsys23_data.tsv
src/: make_wordcloud.py  work.py
